fix(css): fix horizontal scroll with photo carousel

--- a/app/static/css/main_v2.css
+++ b/app/static/css/main_v2.css
@@ -215,12 +215,10 @@ samp {
   position: relative;
   margin: auto;
 }
-
 /* Hide the images by default */
 .mySlides {
-    display: none;
+  display: none;
 }
-
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -236,18 +234,20 @@ samp {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
 /* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-
+/* Position the "prev button" to the left */
+.prev {
+  left: 0;
+  border-radius: 3px 0 0 3px;
+}
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(51,51,51,0.7);
 }
-
 /* Caption text */
 .slides-caption {
   color: #f2f2f2;
@@ -255,10 +255,8 @@ samp {
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
-  width: 100%;
   text-align: center;
 }
-
 /* Number text (1/3 etc) */
 .slides-numbertext {
   color: #f2f2f2;
@@ -267,7 +265,6 @@ samp {
   position: absolute;
   top: 0;
 }
-
 /* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
@@ -279,20 +276,21 @@ samp {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
 .active, .dot:hover {
   background-color: #717171;
 }
-
 /* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
 }
-
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  from {
+     opacity: .4
+ }
+  to {
+     opacity: 1
+ }
 }
 /* END Slideshow */
 
